--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -1,4 +1,4 @@
-require: rubocop-rspec
+inherit_from: https://raw.githubusercontent.com/leanpanda-com/rubocop/master/rubocop-rspec.yml
 
 AllCops:
   TargetRubyVersion: 2.4
@@ -7,55 +7,12 @@ AllCops:
     - ".bundle/**/*"
     - "bundle/**/*"
 
-Layout/AlignParameters:
-  EnforcedStyle: with_fixed_indentation
-Layout/DotPosition:
-  EnforcedStyle: trailing
-Layout/SpaceInsideHashLiteralBraces:
-  EnforcedStyle: no_space
-
-Metrics/BlockLength:
-  ExcludedMethods:
-    - context
-    - describe
-    - feature
-    - shared_examples
-    - shared_examples_for
-    - namespace
-    - draw
-
 Style/ClassAndModuleChildren:
   EnforcedStyle: nested
-Style/Documentation:
-  Enabled: false
 Style/EmptyMethod:
   EnforcedStyle: expanded
-Style/FrozenStringLiteralComment:
-  Enabled: false
-Style/Lambda:
-  EnforcedStyle: literal
 Style/ModuleFunction:
   EnforcedStyle: module_function
-Style/NegatedIf:
-  Enabled: false
-Style/PercentLiteralDelimiters:
-  Enabled: false
-Style/StringLiterals:
-  EnforcedStyle: double_quotes
-Style/SymbolArray:
-  Enabled: false
 
-RSpec/DescribeClass:
-  Exclude:
-    - spec/*
-    - spec/features/**/*
-RSpec/LetSetup:
-  Enabled: false
 RSpec/MultipleExpectations:
   Max: 2
-  Exclude:
-    - spec/features/**/*
-RSpec/NamedSubject:
-  Enabled: false
-RSpec/NotToNot:
-  Enabled: false
