Add to env test sample a new var

--- a/.env.test.sample
+++ b/.env.test.sample
@@ -1,1 +1,4 @@
 NOKOTIME_TOKEN={{Insert here the nokotime's token API}}
+REAL_NOKOTIME_USER_ID={{Insert here a real user id. This variable will use during the test.}}
+REAL_NOKOTIME_PROJECT_ID={{Insert here a real project id.}}
+REAL_NOKOTIME_ENTRY_ID={{Insert here a real entry id.}}
