--- a/.travis.yml
+++ b/.travis.yml
@@ -3,5 +3,11 @@ sudo: false
 language: ruby
 cache: bundler
 rvm:
-  - 2.6.1
+  - 2.4
+  - 2.5
+  - 2.6
 before_install: gem install bundler -v 2.0.1
+before_script:
+  - cp .env.test.sample .env.test
+scripts:
+  - bundle exec rspec spec
