Change sample env

--- a/.env.test.sample
+++ b/.env.test.sample
@@ -1,4 +1,5 @@
-NOKOTIME_TOKEN={{Insert here the nokotime's token API}}
-REAL_NOKOTIME_USER_ID={{Insert here a real user id. This variable will use during the test.}}
-REAL_NOKOTIME_PROJECT_ID={{Insert here a real project id.}}
-REAL_NOKOTIME_ENTRY_ID={{Insert here a real entry id.}}
+NOKOTIME_TOKEN=token
+REAL_NOKOTIME_USER_ID=12345
+REAL_NOKOTIME_ENTRY_ID=12345
+REAL_NOKOTIME_TAG_ID=12345
+REAL_NOKOTIME_PROJECT_ID=12345
