--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -6,6 +6,7 @@ AllCops:
     - "bin/**/*"
     - ".bundle/**/*"
     - "bundle/**/*"
+    - "vendor/bundle/**/*"
 
 Style/ClassAndModuleChildren:
   EnforcedStyle: nested
