--- a/.travis.yml
+++ b/.travis.yml
@@ -8,6 +8,11 @@ rvm:
   - 2.6
 before_install: gem install bundler -v 2.0.1
 before_script:
+  - curl -L https://codeclimate.com/downloads/test-reporter/test-reporter-latest-linux-amd64 > ./cc-test-reporter
+  - chmod +x ./cc-test-reporter
+  - ./cc-test-reporter before-build
   - cp .env.test.sample .env.test
 scripts:
   - bundle exec rspec spec
+after_script:
+  - ./cc-test-reporter after-build --exit-code $TRAVIS_TEST_RESULT
